first step removing odds